--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ box-shadow: 0px 0px 139px 44px rgba(112,46,255,0.9); */
 
   /* box-shadow: 0px 0px 100px rgb(106, 0, 255); */
   /* box-shadow: 0px 10px 20px 0px rgba(104, 1, 231, 0.51); */
-  box-shadow: 0px 0px 34px #2200ff99;
+  box-shadow: 0px 0px 34px #7300ff99 !important;
   width: 330px;
   font-weight: 500;
   font-size: 1.2rem;
